# printer-bot

./: .gitignore  Makefile  README.md  docker-compose.yml
bot/: Dockerfile  main.py  pyproject.toml
bot/src/: config.py  dispatcher.py  keyboard.py
bot/src/application/container/: container.py
bot/src/application/services/: user_service.py
bot/src/core/config/: config.py
bot/src/core/container/: main_container.py
bot/src/domain/repository_interfaces/: user_repository_interface.py
bot/src/handlers/: document_handler.py  done_handler.py  start_handler.py
bot/src/infrastructure/db/container/: container.py
bot/src/infrastructure/db/repositories/: user_repository.py
bot/src/presentation/handlers/: start_handler.py
