[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    { name = "Dilemma25", email = "valtert90@mail.ru" }
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "dependency-injector (>=4.48.2,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"